# filesystem-mcp

./: .gitignore  README.md
backend/: env.example  main.py  pyproject.toml  setup_ollama.py  test_llm.py  test_server.py
backend/src/config/: settings.py
backend/src/middleware/: __init__.py  error_handlers.py
backend/src/models/: __init__.py  common.py  file_operations.py  prompt.py  workspace.py
backend/src/routes/: __init__.py  health.py  operations.py  prompt.py  workspace.py
backend/src/services/: __init__.py  file_system_service.py  llm_service.py  prompt_processor.py  singleton.py
backend/src/utils/: __init__.py  security.py  validators.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: backendApi.ts
frontend/src/components/: PromptModal.css  PromptModal.tsx
